--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <canvas width="600" height="400"></canvas>
-
+  <button id="start">START</button>
   <script src="assets/js/constants.js"></script>
+  <script src="assets/js/background.js"></script>
   <script src="assets/js/game.js"></script>
   <script src="assets/js/player.js"></script>
   <script src="assets/js/index.js"></script>
